[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["pkroeger <peter14mail@gmail.com>"]
readme = "README.md"
packages = [{ include = "advent_of_code_2023" }]

[tool.poetry.scripts]
start = "python days/main.py"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
